objects/Touchplan__c.object
<CustomObject>
    <fields>
        <fullName>Account_Product_Type_Requirements__c</fullName>
        <inlineHelpText>Account Product Types necessary to stay in threshold</inlineHelpText>
        <label>Account Product Type Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Yodle_Paths_2_0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Ads_Minimum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget Ads Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Opt_Out_of_Call_Experience__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Opt Out of Call Experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Opt_Out_of_Email_Experience__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Opt Out of Email Experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Client_Type_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Case_Record_Types__c</fullName>
        <label>Create Case Record Types</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Budget_Minimum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly Budget Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Spend_Threshold__c</fullName>
        <inlineHelpText>Maximum monthly spend before account is taken out of Experience</inlineHelpText>
        <label>Monthly Spend Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_Allocation__c</fullName>
        <label>Percent Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_ID__c</fullName>
        <label>Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touchplan_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Touchplan Template</label>
        <referenceTo>Touchplan__c</referenceTo>
        <relationshipLabel>Touchplans</relationshipLabel>
        <relationshipName>Touchplans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Touchplan_Type__c</fullName>
        <label>Touchplan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test Group</fullName>
                </value>
                <value>
                    <fullName>Control</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Touchplan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Touchplan_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Client_Experience</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Active__c</columns>
        <columns>Touchplan_Type__c</columns>
        <columns>Touchplan_Template__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Touchplan__c.Default</value>
        </filters>
        <label>Client Experience</label>
    </listViews>
    <listViews>
        <fullName>LBW</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Leads</value>
        </filters>
        <label>LBW</label>
    </listViews>
    <nameField>
        <label>Touchplan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Touchplans</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Template</fullName>
        <active>true</active>
        <label>Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>